Fix: Jump section to follow me when scrolling

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3059,8 +3059,9 @@ body.no-scroll {
     display: grid;
     grid-template-columns: 250px 1fr;
     gap: 50px;
+    align-items: flex-start; /* <--- This line is the problem */
 }
-.post-sidebar {
+.post-sidebar .sidebar-sticky-content {
     position: sticky;
     top: 120px; /* Adjust based on header height */
 }
@@ -3323,10 +3324,7 @@ body.no-scroll {
     gap: 50px;
     align-items: flex-start;
 }
-.post-sidebar {
-    position: sticky;
-    top: 120px; /* Adjust based on header height */
-}
+
 
 /* Correct Widget Styling */
 .sidebar-widget {
